massive refactor, handled new delegate, added massive logging and methods resilience